* Improved fixed structures system (more clear, optimized and stable)
* Improved road-to-settlemen's-gate system
* Improved roads & walls code
* Improved GUI opening code
* Improved unit costs

* Optimized lots of client-size things

* Returned sandstone chests, ice & obsidian stalactites to natural spawn
* Returned targaryen items, lannicter brooch and silver hand brooch to natural drop

* Fixed bug with caves under settelements
* Fixed bug with no-effect fields in config
* Fixed bug with arryn conquest spawnlist
* Fixed bug with one stone wall
* Fixed bug with uncraftable weirwood fence
* Fixed bug with month name
* Fixed bug with drown Euron Greyjoy and its soldiers
* Fixed wrong names of waypoints (example: Servin's C. -> Cerwyn's C.)
* Fixed very old bug with imflammable leaves
* Fixed bug with Trystane Martell drop
* Fixed bug with one broken command
* Fixed bug with cargo cart
* Fixed 2 bugs with granite structures

>>BUILD 23.07.10
+ Added lots of forest biomes
+ Village generationg chunk selector is a config value now (check for the word "grid")
+ Added fortresses into spawning of essos free cities

+ Added thaumcraft stand support (no crash)
+ Added LOTR submods support (no crash in GUI) (you still must remove META-INF to enable general compatibility)

* Children and girls now can't participate in dothraki skirmishes
* Benjen Stark spawning without horse from spawn egg now
* Manticores and red scorpions are bigger now
* Remade all roads from scratch

* Improved qarth & summer colonies
* Improved waypoints with ruins: now ruins are NEAR and player won't have problems with getting out of
* Improved biome music code
* Improved map colors
* Improved tree sets in structures
* Improved King's Landing (added second gate to the east)
* Improved road system to enable pixel coords like 1.542434
* Improved Three Towers waypoint
* Improved buttons' text color
* Improved Five Forts wall and tower
* Imporved map accuracy
* Improved Victarion camp