@@ -2187,13 +2187,13 @@ got.enchant.strong2=Mächtig II
 got.enchant.strong3=Mächtig III
 got.enchant.strong4=Mächtig IV
 got.enchant.toolSilk.desc=Baut Blöcke in ihrem normalen Zustand ab
-got.enchant.toolSilk=Behutsam
-got.enchant.toolSlow1=Träge
+got.enchant.toolSilk=Meisterhaft
+got.enchant.toolSlow1=Unbequem
 got.enchant.toolSpeed.desc=%s Werkzeug Geschwindigkeit
-got.enchant.toolSpeed1=Flink I
-got.enchant.toolSpeed2=Flink II
-got.enchant.toolSpeed3=Flink III
-got.enchant.toolSpeed4=Flink IV
+got.enchant.toolSpeed1=Komfortabel I
+got.enchant.toolSpeed2=Komfortabel II
+got.enchant.toolSpeed3=Komfortabel III
+got.enchant.toolSpeed4=Komfortabel IV
 got.enchant.weak1=Schwach I
 got.enchant.weak2=Schwach II
 got.enchant.weak3=Schwach III
