@@ -2187,13 +2187,13 @@ got.enchant.strong2=Strong II
 got.enchant.strong3=Strong III
 got.enchant.strong4=Strong IV
 got.enchant.toolSilk.desc=Can harvest special blocks
-got.enchant.toolSilk=Handy
-got.enchant.toolSlow1=Slow
+got.enchant.toolSilk=Masterful
+got.enchant.toolSlow1=Uncomfortable
 got.enchant.toolSpeed.desc=%s tool speed
-got.enchant.toolSpeed1=Fast I
-got.enchant.toolSpeed2=Fast II
-got.enchant.toolSpeed3=Fast III
-got.enchant.toolSpeed4=Fast IV
+got.enchant.toolSpeed1=Comfortable I
+got.enchant.toolSpeed2=Comfortable II
+got.enchant.toolSpeed3=Comfortable III
+got.enchant.toolSpeed4=Comfortable IV
 got.enchant.weak1=Weak I
 got.enchant.weak2=Weak II
 got.enchant.weak3=Weak III
