@@ -2187,13 +2187,13 @@ got.enchant.strong2=Мощный II
 got.enchant.strong3=Мощный III
 got.enchant.strong4=Мощный IV
 got.enchant.toolSilk.desc=Может добыть спец. блоки
-got.enchant.toolSilk=Удобный
-got.enchant.toolSlow1=Медленный
+got.enchant.toolSilk=Майстерський
+got.enchant.toolSlow1=Неудобный
 got.enchant.toolSpeed.desc=%s скорость инструмента
-got.enchant.toolSpeed1=Быстрый I
-got.enchant.toolSpeed2=Быстрый II
-got.enchant.toolSpeed3=Быстрый III
-got.enchant.toolSpeed4=Быстрый IV
+got.enchant.toolSpeed1=Удобный I
+got.enchant.toolSpeed2=Удобный II
+got.enchant.toolSpeed3=Удобный III
+got.enchant.toolSpeed4=Удобный IV
 got.enchant.weak1=Слабый I
 got.enchant.weak2=Слабый II
 got.enchant.weak3=Слабый III
