@@ -2188,12 +2188,12 @@ got.enchant.strong3=Потужний III
 got.enchant.strong4=Потужний IV
 got.enchant.toolSilk.desc=Може добути спец. блоки
 got.enchant.toolSilk=Зручний
-got.enchant.toolSlow1=Неспішний
+got.enchant.toolSlow1=Незручний
 got.enchant.toolSpeed.desc=%s швидкість інструменту
-got.enchant.toolSpeed1=Швидкий I
-got.enchant.toolSpeed2=Швидкий II
-got.enchant.toolSpeed3=Швидкий III
-got.enchant.toolSpeed4=Швидкий IV
+got.enchant.toolSpeed1=Зручний I
+got.enchant.toolSpeed2=Зручний II
+got.enchant.toolSpeed3=Зручний III
+got.enchant.toolSpeed4=Зручний IV
 got.enchant.weak1=Слабкий I
 got.enchant.weak2=Слабкий II
 got.enchant.weak3=Слабкий III
